# monorepo

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  README.md  SECURITY.md
licenses/: FreeArtLicense-1.3  LicenseRef-VPL
priory/: .gitignore  Cargo.toml  README.md  example_priory.toml
priory/src/: bootstrap.rs  config.rs  event_handler.rs  holepuncher.rs  lib.rs  swarm_client.rs
sigil/: .env.build  .gitignore  Cargo.toml  Dockerfile  README.md  build  build.rs  build_binary  dnsmasq.conf  docker-compose.yml  example_sigil.toml
sigil/src/: config.rs  main.rs
sigil/tests/: integration.rs  test_helper.rs
sigil/tests/test_configs/: a.toml  b.toml  c.toml  default.toml
vigil/: Cargo.toml  Dockerfile  build.rs  build.sh
vigil/src/: main.rs
