[package]
name = "priory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.82"
futures = "0.3.30"
libp2p = { version = "0.54.1", features = [
	"tokio",
	"gossipsub",
	"mdns",
	"noise",
	"macros",
	"tcp",
	"yamux",
	"quic",
	"upnp",
	"kad",
	"ping",
	"dcutr",
	"dns",
	"identify",
	"relay",
	"serde",
] }

futures-timer = "3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.88"
fastrand = "2.1.1"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"

[dependencies.libp2p-gossipsub]
version = "0.47.0"

[dependencies.libp2p-kad]
version = "0.46.2"
