[package]
name = "sigil"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
priory = { git = "https://github.com/JossDuff/monorepo.git", branch = "dev" }
anyhow = "1.0.89"
clap = { version = "4.3.0", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.11.5"
futures = "0.3"
jsonrpsee = { version = "0.24.4", features = ["server", "macros"] }
log = "0.4"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
testcontainers = "0.22.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [
	"registry",
	"env-filter",
] }
toml = "0.8.19"
